# adaptive-retrieval-qa-with-answerability-calibration

./: .gitignore  FINAL_QA_PASS.md  FINAL_QUALITY_PASS_COMPLETE.md  FINAL_QUALITY_REPORT.md  QUALITY_IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
results/: results.json  training_metrics.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_retrieval_qa_with_answerability_calibration/: __init__.py
src/adaptive_retrieval_qa_with_answerability_calibration/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_retrieval_qa_with_answerability_calibration/evaluation/: __init__.py  metrics.py
src/adaptive_retrieval_qa_with_answerability_calibration/models/: __init__.py  components.py  model.py
src/adaptive_retrieval_qa_with_answerability_calibration/training/: __init__.py  trainer.py
src/adaptive_retrieval_qa_with_answerability_calibration/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
